Update README.md, with the Installation Guide